Upadate index file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<article>
 				<h2>MON PARCOUR : <strong>FARMAN</strong></h2>	
 				<p>FARMAN conçoit, réalise et intégre des lignes d'assemblage robotisées de soudure pour l'automobile.</p>
-				<a href="images/cellule.jpg"><img src="images/cellule_mini.jpg" alt="Photo de cellule" title="Cliquez pour agrandir" /></a>
+				<a href="cellule.jpg"><img src="cellule_mini.jpg" alt="Photo de cellule" title="Cliquez pour agrandir" /></a>
 
 				<p>J'ai pendant 8 ans été géomètre automobile, participant de la conception à 
 				l'intégration de nos machines chez nos clients en France et dans quelques pays du 
@@ -72,10 +72,10 @@
 			…		</ul>
 				</p>
 				<figure>
-					<a href="images/diag.jpg"><img src="images/diag_mini.jpg" alt="Photo d'un diagramme" title="Cliquez pour agrandir" /></a>
-					<a href="images/diag_base.jpg"><img src="images/diag_base_mini.jpg" alt="Photo du menu Base" title="Cliquez pour agrandir" /></a>
-					<a href="images/diag_modif.jpg"><img src="images/diag_modif_mini.jpg" alt="Photo du menu Base" title="Cliquez pour agrandir" /></a>
-					<a href="images/diag_code.jpg"><img src="images/diag_code_mini.jpg" alt="Photo du code" title="Cliquez pour agrandir" /></a>
+					<a href="diag.jpg"><img src="diag_mini.jpg" alt="Photo d'un diagramme" title="Cliquez pour agrandir" /></a>
+					<a href="diag_base.jpg"><img src="diag_base_mini.jpg" alt="Photo du menu Base" title="Cliquez pour agrandir" /></a>
+					<a href="diag_modif.jpg"><img src="diag_modif_mini.jpg" alt="Photo du menu Base" title="Cliquez pour agrandir" /></a>
+					<a href="diag_code.jpg"><img src="diag_code_mini.jpg" alt="Photo du code" title="Cliquez pour agrandir" /></a>
 				</figure>
 				
 				<p>Je me suis auto-formé sur le site du zéro (OpenClassRooms) / Stackoverflow + différentes sources sur le net. 
@@ -88,9 +88,9 @@
 				une sérialisation pour les sauvegardes (difficile avec des class custom)</p>
 				
 				<figure>
-					<a href="images/DiagC_1.jpg"><img src="images/diagc_1_mini.jpg" alt="Photo du diagramme en C#" title="Cliquez pour agrandir" /></a>
-					<a href="images/DiagC_2.jpg"><img src="images/diagc_2_mini.jpg" alt="Photo du code" title="Cliquez pour agrandir" /></a>
-					<a href="images/DiagC_3.jpg"><img src="images/diagc_3_mini.jpg" alt="Photo du code" title="Cliquez pour agrandir" /></a>
+					<a href="DiagC_1.jpg"><img src="diagc_1_mini.jpg" alt="Photo du diagramme en C#" title="Cliquez pour agrandir" /></a>
+					<a href="DiagC_2.jpg"><img src="diagc_2_mini.jpg" alt="Photo du code" title="Cliquez pour agrandir" /></a>
+					<a href="DiagC_3.jpg"><img src="diagc_3_mini.jpg" alt="Photo du code" title="Cliquez pour agrandir" /></a>
 				</figure>
 			</article>
 			
